lib/tests/fixtures/compiler/parser/application_capture_param.baseline
Error: application_capture_param.pp:1:18: parameter $params cannot be a capture parameter.
  application bad(*$params)
                   ^~~~~~~
